--- a/style.css
+++ b/style.css
@@ -260,30 +260,30 @@ footer{
 .menu span:after {
 	margin-top: 12px;
 }
-.example5 span {
+.hareket span {
 	-webkit-transition-duration: 0s; transition-duration: 0s;
 	-webkit-transition-delay: 0.2s; transition-delay: 0.2s;
 }
-.example5:hover span {
+.hareket:hover span {
 	background-color: rgba(0,0,0,0.0);
 	-webkit-transition-delay: 0.2s; transition-delay: 0.2s;
 }
-.example5 span:before {
+.hareket span:before {
 	-webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
 	-webkit-transition-duration: 0.2s; transition-duration: 0.2s;
 	-webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
 }
-.example5:hover span:before {
+.hareket:hover span:before {
 	margin-top: 0;
 	-webkit-transform: rotate(45deg); transform: rotate(45deg);
 	-webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
 }
-.example5 span:after {
+.hareket span:after {
 	-webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
 	-webkit-transition-duration: 0.2s; transition-duration: 0.2s;
 	-webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
 }
-.example5:hover span:after {
+.hareket:hover span:after {
 	margin-top: 0;
 	-webkit-transform: rotate(-45deg); transform: rotate(-45deg);
 	-webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
